--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=ems
 DB_USERNAME=root
-DB_PASSWORD=Root@123
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
